--- a/css/header.css
+++ b/css/header.css
@@ -56,6 +56,7 @@ header input:checked ~ nav {
   padding-left: 25px;
 }
 
+/* layout para tablet >=768px de tela*/
 @media screen and (min-width: 768px) {
   header {
     padding: 37px 60px;
@@ -81,6 +82,7 @@ header input:checked ~ nav {
   }
 }
 
+/* layout para desktop >=1440px de tela*/
 @media screen and (min-width: 1440px) {
   header {
     padding: 37px 120px;
@@ -92,5 +94,12 @@ header input:checked ~ nav {
 
   .header-logo-desktop {
     display: block;
+  }
+}
+
+/* layout para desktop >=1920px de tela*/
+@media screen and (min-width: 1920px) {
+  header{
+    padding: 37px 225px;
   }
 }
