adiciona configuracao global dos botoes e seção de ofertas

--- a/css/global.css
+++ b/css/global.css
@@ -51,7 +51,7 @@ section {
   gap: 18px;
 }
 
-.section-title h3 {
+.section-title h2 {
   font-weight: var(--highlight-text-weight);
   font-size: 32px;
 }
@@ -61,4 +61,16 @@ section {
   width: 180px;
   height: 4px;
   border: none;
+}
+
+.button{
+  display: inline-block;
+  color: var(--text-menu-color);
+  text-decoration: none;
+  background-color: var(--button-color);
+  border-radius: 16px;
+  width: 280px;
+  line-height: 64px;
+  font-weight: var(--highlight-text-weight);
+  font-size: 20;
 }
