--- a/css/offers.css
+++ b/css/offers.css
@@ -38,18 +38,21 @@
   font-size: 20px;
   line-height: 32px;
   font-weight: var(--text-weight);
+  text-align: center;
 }
 
 .offer-card h3 {
   font-weight: var(--highlight-text-weight);
   font-size: 40px;
   margin: 8px auto 24px;
+  text-align: center;
 }
 
 .offer-value {
   font-weight: var(--highlight-text-weight);
   font-size: 32px;
   margin-bottom: 24px;
+  text-align: center;
 }
 
 .offer-card.card-1 {
