--- a/css/global.css
+++ b/css/global.css
@@ -63,7 +63,7 @@ section {
   border: none;
 }
 
-.button{
+.button {
   display: inline-block;
   color: var(--text-menu-color);
   text-decoration: none;
@@ -74,4 +74,16 @@ section {
   font-weight: var(--highlight-text-weight);
   font-size: 20;
   text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+  section {
+    width: 648px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  section {
+    width: 1200px;
+  }
 }
