--- a/css/categories.css
+++ b/css/categories.css
@@ -1,32 +1,45 @@
-.categories-grid{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 24px;
+.categories-grid {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 24px;
 }
 
-.categorie-card{
-    color: var(--text-body-color);
-    text-decoration: none;
-    background-color: var(--background-tertiary-color);
-    width: 312px;
-    height: 220px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 24px;
-    border-radius: 16px;
+.categorie-card {
+  color: var(--text-body-color);
+  text-decoration: none;
+  background-color: var(--background-tertiary-color);
+  width: 312px;
+  height: 220px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 24px;
+  border-radius: 16px;
 }
 
-.categorie-card h4{
-    font-weight: var(--highlight-text-weight);
-    font-size: 28px;
-    text-align: center;
+.categorie-card h4 {
+  font-weight: var(--highlight-text-weight);
+  font-size: 28px;
+  text-align: center;
 }
 
-.categorie-img{
-    width: 80px;
-    height: 80px;
-    text-align: center;
+.categorie-img {
+  width: 80px;
+  height: 80px;
+  text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+  .categories-grid {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .categorie-card{
+    width: 281px;
+  }
 }
