--- a/css/global.css
+++ b/css/global.css
@@ -14,7 +14,7 @@
   --background-primary-color: #ffffff;
   --background-secondary-color: #000000;
   --background-tertiary-color: #E5E5E5;
-  --background-highlight-color: #D9D9D9;
+  --background-highlight-color: #C9C9C9;
 
   /* cores de textos */
   --text-body-color: #222222;
