--- a/css/global.css
+++ b/css/global.css
@@ -74,11 +74,15 @@ section {
   text-decoration: none;
   background-color: var(--button-color);
   border-radius: 16px;
-  width: 280px;
+  width: 100%;
   line-height: 64px;
   font-weight: var(--highlight-text-weight);
-  font-size: 20;
   text-align: center;
+  font-size: 20px;
+}
+
+.button:hover {
+  background-color: var(--highlight-color);
 }
 
 @media screen and (min-width: 768px) {
