--- a/css/offers.css
+++ b/css/offers.css
@@ -67,6 +67,10 @@
   background-image: url(../img/bg-card-paraiba.jpg);
 }
 
+.offer-card footer{
+  width: 280px;
+}
+
 .offer-card.card-4 {
   background-image: url(../img/bg-card-manaus.jpg);
 }
